# CPP_ProjektStudia_WarGame

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
application/controllers/: aicontroller.cpp  aicontroller.h  gamecontroller.cpp  gamecontroller.h  humancontroller.cpp  humancontroller.h
application/controllers/interfaces/: Iplayercontroller.h
application/engine/: attackresolver.cpp  attackresolver.h  battleengine.cpp  battleengine.h  defaultattackstrategy.cpp  defaultattackstrategy.h  iattackstrategy.cpp  iattackstrategy.h
application/helpers/: battleuiformatter.cpp  battleuiformatter.h  unitplacementhelper.cpp  unitplacementhelper.h
application/models/: artillery.cpp  artillery.h  board.cpp  board.h  gamestate.cpp  gamestate.h  infantry.cpp  infantry.h  medic.cpp  medic.h  player.cpp  player.h  tank.cpp  tank.h  team.cpp  team.h  tile.cpp  tile.h  unit.cpp  unit.h
application/models/enums/: maptype.h  teamside.h  terraintype.h
application/models/interfaces/: IUnit.h
application/services/: aiturnservice.cpp  aiturnservice.h  battleboardservice.cpp  battleboardservice.h  battleinteractionservice.cpp  battleinteractionservice.h  gameconfigvalidationservice.cpp  gameconfigvalidationservice.h  gamesetupservice.cpp  gamesetupservice.h
config/: gameconfig.h  gameconfigdata.cpp  gameconfigdata.h  teamComposition.h
pages/: battlepage.cpp  battlepage.h  battlepage.ui  configpage.cpp  configpage.h  configpage.ui  menupage.cpp  menupage.h  menupage.ui  rulespage.cpp  rulespage.h  rulespage.ui  teamcomposition.cpp  teamcomposition.h  teamcomposition.ui  teamconfigdialog.cpp  teamconfigdialog.h  teamconfigdialog.ui
